restyle posts page

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,5 +1,10 @@
-<div class="posts-list">
-<h1>FEATURED POSTS</h1>
+<header>
+ <h1>FEATURED POSTS</h1>
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none">
+    <polygon fill="white" points="0,100 100,0 100,100"/>
+  </svg>
+</header>
+
  <h6 class="login">
         <% if logged_in? %>
           <%= link_to "logout", logout_path %>
@@ -23,4 +28,3 @@
         <%= link_to "View", logged_in? ?post_path(p) : login_path %>
     </div>
 <% end %>
-</div>
