--- a/app/assets/stylesheets/posts.sass
+++ b/app/assets/stylesheets/posts.sass
@@ -3,57 +3,22 @@
     margin: 0px
     padding: 0px
     box-sizing: border-box
+header
+    position: relative
+    height: 300px
+    background-image: linear-gradient(170deg, rgba(51, 13, 33, 0.9), rgba(189, 41, 120, 1))
 
-.posts-list
-    background: url("https://images.unsplash.com/photo-1493998704576-fbed7cf7390c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80") no-repeat
-    background-size: cover
+h1
+    padding: 100px 0
+    font: 44px "Arial"
+    text-align: center
+
+header h1
+    color: white
+
+svg
+    position: absolute
+    bottom: 0
     width: 100%
-    min-height: 100vh
-    font-family: 'Kanit', sans-serif
-    h1
-        text-align: center
-        padding: 1rem
+    height: 10vw
 
-.login
-    a
-        background: #3096f9
-        text-decoration: none
-        color: white
-        position: absolute
-        right: 2rem
-        padding: 10px
-        border-radius: 15px
-        top: 1rem
-        width: 4rem
-        font-size: 1rem
-        text-align: center
-.post-item
-    margin: 2rem 13rem
-    background: white
-    display: grid
-    grid-template-columns: 1fr 2fr 1fr
-    align-items: center
-    justify-items: center
-    p
-        color: grey
-        font-weight: 100
-        padding: 2.2rem
-    h2
-        padding: 1.8rem
-    a
-        background: #3096f9
-        padding: 10px
-        width: 5rem
-        color: white
-        font-weight: bold
-        font-size: 1rem
-        border-radius: 20px
-        text-decoration: none
-        &:focus
-            outline: none
-    >div
-        &:nth-child(1)
-            background: url("https://cdn.pixabay.com/photo/2014/03/24/13/42/people-294106_960_720.png") 30% 50%
-            width: 100%
-            height: 100%
-            color: white
