--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -5,26 +5,25 @@
   </svg>
 </header>
 
- <h6 class="login">
-        <% if logged_in? %>
-          <%= link_to "logout", logout_path %>
-        <% else %>
-          <%= link_to "login", login_path %>
-       <%end%>
-      </h6>
-
+<div class="post-list">
 <% @posts.each do |p|%>
 
 <div class="post-item">
     <div>
+    <img src="https://image.flaticon.com/icons/svg/2919/2919600.svg" alt="user">
+    <div>
+   
     <h2><%= p.title %></h2>
+     <% @users.each do |u|%>
+      <strong>  <%=u.id==p.user_id && logged_in? ? u.username: ""%></strong>
+    <%end%>
+     </div>
     </div>
         <p>
         <%= p.text %>
-        <% @users.each do |u|%>
-      <strong>  <%=u.id==p.user_id && logged_in? ? u.username: ""%></strong>
-    <%end%>
+       
         <p>
         <%= link_to "View", logged_in? ?post_path(p) : login_path %>
     </div>
 <% end %>
+</div>
