--- a/app/assets/stylesheets/posts.sass
+++ b/app/assets/stylesheets/posts.sass
@@ -3,6 +3,9 @@
     margin: 0px
     padding: 0px
     box-sizing: border-box
+body
+    font-family: 'Kanit', sans-serif
+    background: #fdf4f7
 header
     position: relative
     height: 300px
@@ -21,4 +24,35 @@ svg
     bottom: 0
     width: 100%
     height: 10vw
-
+.view
+    display: flex
+    justify-content: center
+    position: relative
+.view-post
+    background: white
+    box-shadow: 4px 5px 17px 5px rgba(0,0,0,0.42)
+    width: 50vw
+    padding: 2rem
+    border-radius: 10px
+    display: grid
+    justify-items: center
+    text-align: center
+    place-self: center
+    position: relative
+    top: -30px
+    p
+        padding-bottom: 1rem
+    img
+        width: 5rem
+.delete-post
+    background: white
+    box-shadow: 4px 5px 17px 5px rgba(0,0,0,0.42)
+    width: 50vw
+    padding: 2rem
+    border-radius: 10px
+    display: grid
+    justify-items: center
+    text-align: center
+    place-self: center
+    position: relative
+    top: -30px
