--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,3 +1,5 @@
+<div class="registration">
+<div>
 <%= form_with(model: user, local: true) do |form| %>
   <% if user.errors.any? %>
     <div id="error_explanation">
@@ -12,22 +14,22 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :username %>
+    <%= form.label :username %><br>
     <%= form.text_field :username %>
   </div>
 
   <div class="field">
-    <%= form.label :email %>
+    <%= form.label :email %><br>
     <%= form.text_field :email %>
   </div>
 
   <div class="field">
-    <%= form.label :password %>
+    <%= form.label :password %><br>
     <%= form.password_field :password %>
   </div>
 
   <div class="field">
-    <%= form.label :password_confirmation %>
+    <%= form.label :password_confirmation %><br>
     <%= form.password_field :password_confirmation %>
   </div>
 
@@ -35,3 +37,5 @@
     <%= form.submit %>
   </div>
 <% end %>
+</div>
+</div>
