--- a/app/assets/stylesheets/posts.sass
+++ b/app/assets/stylesheets/posts.sass
@@ -56,3 +56,42 @@ svg
     place-self: center
     position: relative
     top: -30px
+.new-post
+    display: flex
+    justify-content: center
+    >div
+        background-color: #fff
+        padding: 1rem
+        border-radius: 10px
+        width: 35vw 
+        display: flex
+        flex-direction: column
+        align-items: center
+        input[type="text"]
+            width: 20rem
+            height: 1.8rem
+            border-radius: 5px
+            border: 1px solid rgba(0,0,0,0.25 )
+        label
+            margin: 1rem 0px
+        textarea
+            width: 20rem
+            min-height: 5rem
+            max-height: 10rem
+            border-radius: 5px
+        input[type="submit"]
+            background: #952f66
+            color: #fff
+            padding: 10px 1rem
+            border-radius: 10px
+            font-weight: 600
+            font-size: 1rem
+            transition: 0.35s
+            &:hover
+                background: #701747
+                cursor: pointer
+                
+                
+
+        
+            
