--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,5 +1,6 @@
 <h1>Create a post</h1>
-
+<div class="new-post">
+<div>
 <%= form_for @posts, local: true do |f| %>
   <ul>
   <% @posts.errors.full_messages.each do |error| %>
@@ -9,11 +10,11 @@
   <p>
     <%= f.label :title %><br />
     <%= f.text_field :title %>
-  </p>
+  </p><br/><br/>
   <p>
     <%= f.label :text %><br />
     <%= f.text_area :text %>
-  </p>
+  </p><br/><br/>
 
   <p>
     <%= f.submit %>
@@ -21,3 +22,5 @@
 
 
 <% end %>
+</div>
+</div>
