grant delete permission to article owner only

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -25,6 +25,8 @@
         <%= @post.text %>
         <p>
         <%= link_to "Back", posts_path, class: "view-path" %>
-        <%= link_to "Delete", post_path(@post), method: :delete, data: {confirm: "Really delete the article?"}, class: "delete-path" %>
+        <%if @owner.id == @post.user_id%>
+          <%= link_to "Delete", post_path(@post), method: :delete, data: {confirm: "Really delete the article?"}, class: "delete-path" %>
+        <%end%>
     </div>
     </div>
