--- a/app/assets/stylesheets/nav.sass
+++ b/app/assets/stylesheets/nav.sass
@@ -89,3 +89,41 @@ nav
     color: #952f66
     text-decoration: none
     font-weight: 600
+@media (min-width: 768px ) and (max-width: 1024px)
+    .post-list
+        >div
+            width: 90%
+    .delete-path
+        color: white
+        background: red
+        text-decoration: none
+        font-weight: 600
+        padding: 10px 1rem
+        margin: 10px 3rem
+        border-radius: 10px
+    .view-path
+        color: white
+        background: #952f66
+        text-decoration: none
+        font-weight: 600
+        padding: 10px 1rem
+        margin: 10px 3rem
+        border-radius: 10px
+@media (max-width: 768px)
+    .post-list
+        >div
+            width: 90%
+    .delete-path
+        color: white
+        background: red
+        text-decoration: none
+        font-weight: 600
+        padding: 10px 1rem
+        border-radius: 10px
+    .view-path
+        color: white
+        background: #952f66
+        text-decoration: none
+        font-weight: 600
+        padding: 10px 1rem
+        border-radius: 10px
