--- a/app/assets/stylesheets/posts.sass
+++ b/app/assets/stylesheets/posts.sass
@@ -63,7 +63,7 @@ svg
         background-color: #fff
         padding: 1rem
         border-radius: 10px
-        width: 35vw 
+        width: 35vw
         display: flex
         flex-direction: column
         align-items: center
@@ -90,8 +90,11 @@ svg
             &:hover
                 background: #701747
                 cursor: pointer
-                
-                
 
-        
-            
+@media (min-width: 768px ) and (max-width: 1024px)
+    .view-post
+        width: 90vw
+
+@media (max-width: 768px)
+    .view-post
+        width: 90vw
