--- a/app/assets/stylesheets/register.sass
+++ b/app/assets/stylesheets/register.sass
@@ -13,7 +13,7 @@
         align-items: center
     input
         &[type="email"], &[type="password"],&[type="text"]
-            width: 25rem
+            width: 100%
             height: 2rem
             border-radius: 5px
             border: 1px solid rgba(0,0,0,0.25)
@@ -35,4 +35,3 @@
     color: white
     text-decoration: none
     margin-left: 30vw
-    
